# EquityFlow

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
agents/: critic.py  financial_data.py  memory.py  news.py  orchestrator.py  web_researcher.py  writer.py
api/: main.py
config/: logging.py
docs/: architecture.md  data.md  mock_interview.md  resume_bullets.md  test_report.md  thinking_artifact.md
docs/adr/: ADR-001-langgraph-vs-crewai.md  ADR-002-memory-architecture.md  ADR-003-critic-design.md  ADR-004-hallucination-mitigation.md  ADR-005-deployment-strategy.md
eval/: __init__.py  citation_precision.py  run_eval.py  test_cases.json
graph/: __init__.py  pipeline.py  state.py
llm/: __init__.py  client.py  tracing.py
tests/: __init__.py  test_critic.py  test_financial_data.py  test_llm_client.py  test_memory.py  test_news.py  test_orchestrator.py  test_pipeline.py  test_pipeline_integration.py  test_web_researcher.py  test_writer.py
ui/: app.py
