[project]
name = "alpha-agents"
version = "0.1.0"
description = "AlphaAgents — Agentic Equity Research Analyst"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "openai>=1.35.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "tavily-python>=0.3.3",
    "yfinance>=0.2.40",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "langfuse>=2.36.0",
    "ragas>=0.1.14",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.4.1",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm", "agents", "graph", "api", "eval"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "eval/", "ui/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
